src/styles.css
@import 'tailwindcss';

@import 'tw-animate-css';

@import 'shadcn/tailwind.css';

/* public-sans-latin-wght-normal */
@font-face {
	font-family: 'Public Sans Variable';
	font-style: normal;
	font-display: swap;
	font-weight: 100 900;
	src: url(@fontsource-variable/public-sans/files/public-sans-latin-wght-normal.woff2) format('woff2-variations');
	unicode-range:
		U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+20AC, U+2122, U+2191,
		U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@custom-variant dark (&:is(.dark *));

body {
	@apply m-0;
	font-family: 'Public Sans Variable', sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

code {
	/* font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace; */
}

:root {
	--background: oklch(1 0 0);
	--foreground: oklch(0.145 0 0);
	--card: oklch(1 0 0);
	--card-foreground: oklch(0.145 0 0);
	--popover: oklch(1 0 0);
	--popover-foreground: oklch(0.145 0 0);
	--primary: oklch(0.527 0.154 150.069);
	--primary-foreground: oklch(0.982 0.018 155.826);
	--secondary: oklch(0.967 0.001 286.375);
	--secondary-foreground: oklch(0.21 0.006 285.885);
	--muted: oklch(0.97 0 0);
	--muted-foreground: oklch(0.556 0 0);
	--accent: oklch(0.527 0.154 150.069);
	--accent-foreground: oklch(0.982 0.018 155.826);
	--destructive: oklch(0.577 0.245 27.325);
	--destructive-foreground: oklch(0.985 0 0);
	--border: oklch(0.922 0 0);
	--input: oklch(0.922 0 0);
	--ring: oklch(0.708 0 0);
	--chart-1: oklch(0.871 0.15 154.449);
	--chart-2: oklch(0.723 0.219 149.579);
	--chart-3: oklch(0.627 0.194 149.214);
	--chart-4: oklch(0.527 0.154 150.069);
	--chart-5: oklch(0.448 0.119 151.328);
	--radius: 0.625rem;
	--sidebar: oklch(0.985 0 0);
	--sidebar-foreground: oklch(0.145 0 0);
	--sidebar-primary: oklch(0.627 0.194 149.214);
	--sidebar-primary-foreground: oklch(0.982 0.018 155.826);
	--sidebar-accent: oklch(0.97 0 0);
	--sidebar-accent-foreground: oklch(0.205 0 0);
	--sidebar-border: oklch(0.922 0 0);
	--sidebar-ring: oklch(0.708 0 0);
}

.dark {
	--background: oklch(0.145 0 0);
	--foreground: oklch(0.985 0 0);
	--card: oklch(0.205 0 0);
	--card-foreground: oklch(0.985 0 0);
	--popover: oklch(0.205 0 0);
	--popover-foreground: oklch(0.985 0 0);
	--primary: oklch(0.448 0.119 151.328);
	--primary-foreground: oklch(0.982 0.018 155.826);
	--secondary: oklch(0.274 0.006 286.033);
	--secondary-foreground: oklch(0.985 0 0);
	--muted: oklch(0.269 0 0);
	--muted-foreground: oklch(0.708 0 0);
	--accent: oklch(0.448 0.119 151.328);
	--accent-foreground: oklch(0.982 0.018 155.826);
	--destructive: oklch(0.704 0.191 22.216);
	--destructive-foreground: oklch(0.985 0 0);
	--border: oklch(1 0 0 / 10%);
	--input: oklch(1 0 0 / 15%);
	--ring: oklch(0.556 0 0);
	--chart-1: oklch(0.871 0.15 154.449);
	--chart-2: oklch(0.723 0.219 149.579);
	--chart-3: oklch(0.627 0.194 149.214);
	--chart-4: oklch(0.527 0.154 150.069);
	--chart-5: oklch(0.448 0.119 151.328);
	--sidebar: oklch(0.205 0 0);
	--sidebar-foreground: oklch(0.985 0 0);
	--sidebar-primary: oklch(0.723 0.219 149.579);
	--sidebar-primary-foreground: oklch(0.982 0.018 155.826);
	--sidebar-accent: oklch(0.269 0 0);
	--sidebar-accent-foreground: oklch(0.985 0 0);
	--sidebar-border: oklch(1 0 0 / 10%);
	--sidebar-ring: oklch(0.556 0 0);
}

@theme inline {
	--color-background: var(--background);
	--color-foreground: var(--foreground);
	--color-card: var(--card);
	--color-card-foreground: var(--card-foreground);
	--color-popover: var(--popover);
	--color-popover-foreground: var(--popover-foreground);
	--color-primary: var(--primary);
	--color-primary-foreground: var(--primary-foreground);
	--color-secondary: var(--secondary);
	--color-secondary-foreground: var(--secondary-foreground);
	--color-muted: var(--muted);
	--color-muted-foreground: var(--muted-foreground);
	--color-accent: var(--accent);
	--color-accent-foreground: var(--accent-foreground);
	--color-destructive: var(--destructive);
	--color-destructive-foreground: var(--destructive-foreground);
	--color-border: var(--border);
	--color-input: var(--input);
	--color-ring: var(--ring);
	--color-chart-1: var(--chart-1);
	--color-chart-2: var(--chart-2);
	--color-chart-3: var(--chart-3);
	--color-chart-4: var(--chart-4);
	--color-chart-5: var(--chart-5);
	--radius-sm: calc(var(--radius) - 4px);
	--radius-md: calc(var(--radius) - 2px);
	--radius-lg: var(--radius);
	--radius-xl: calc(var(--radius) + 4px);
	--color-sidebar: var(--sidebar);
	--color-sidebar-foreground: var(--sidebar-foreground);
	--color-sidebar-primary: var(--sidebar-primary);
	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
	--color-sidebar-accent: var(--sidebar-accent);
	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
	--color-sidebar-border: var(--sidebar-border);
	--color-sidebar-ring: var(--sidebar-ring);
	--font-sans: 'Public Sans Variable', sans-serif;
	--radius-2xl: calc(var(--radius) * 1.8);
	--radius-3xl: calc(var(--radius) * 2.2);
	--radius-4xl: calc(var(--radius) * 2.6);
}

@layer base {
	* {
		@apply border-border outline-ring/50;
	}
	html {
		@apply scroll-smooth font-sans;
	}
	body {
		@apply bg-sidebar text-foreground overflow-x-hidden;
	}
	h1 {
		@apply text-4xl font-black tracking-tight whitespace-normal scroll-m-20 lg:text-5xl;
	}
	h2 {
		@apply text-3xl font-semibold tracking-tight scroll-m-20 lg:text-4xl;
	}
	h3 {
		@apply text-2xl font-semibold tracking-tight scroll-m-20 lg:text-3xl;
	}
	h4 {
		@apply text-xl font-semibold tracking-tight scroll-m-20 lg:text-2xl;
	}
	button[data-slot='button'] {
		@apply font-semibold!;
	}
	/* ul {
		@apply list-disc list-inside;
	} */

	.markdown {
		/* @apply ps-2; */
		> * {
			@apply border-none;
		}
		> :not(:first-child) {
			@apply mt-2;
		}
		a {
			@apply transition-colors text-primary hover:underline underline-offset-4;
		}
		p {
			@apply text-sm;
		}
		h1,
		h2,
		h3 {
			@apply p-0;
		}
		ul {
			@apply list-disc;
		}
		ol {
			@apply list-decimal;
		}
		ul,
		ol {
			@apply pl-4 m-0 **:m-0 [&_ul]:pl-2 [&_ol]:pl-2 list-outside;
		}
	}
}
@utility animate-page-in {
	animation: animatePageIn 0.3s ease 0.15s both;
}

@utility animate-page-in-delayed {
	animation: animatePageIn 0.3s ease 1.15s both;
}

@utility animate-page-down {
	animation: animatePageDown 0.3s ease 0.15s both;
}

@keyframes animatePageIn {
	from {
		opacity: 0;
		transform: translateY(10px);
	}
	to {
		opacity: 1;
		transform: translateY(0);
	}
}

@keyframes animatePageDown {
	from {
		opacity: 0;
		transform: translateY(-10px);
	}
	to {
		opacity: 1;
		transform: translateY(0);
	}
}

@layer components {
	.wish-page {
		@apply flex flex-col flex-1 w-full max-w-3xl px-2 animate-page-in pb-2 @container/page;
	}
	.wish-page-icon {
		@apply size-22 right-0 @2xl/page:-left-4 -top-6 opacity-30 absolute -z-10;
	}
}

